--- a/config/vesktop/themes/gruvbox.css
+++ b/config/vesktop/themes/gruvbox.css
@@ -1,34 +1,20 @@
 :root {
-	--font: "JetBrainsMonoNL Nerd Font Mono";
+	--font: 'JetBrainsMonoNL Nerd Font Mono';
 	--interactive-normal: #ebdbb2;
 	--text-normal: #ebdbb2;
 	--background-primary: #1d2021;
-	--background-secondary: #181b1b;
+	--background-secondary: #181B1B;
 	--background-tertiary: #1d2021;
 	--channels-default: #83a598;
 	--deprecated-panel-background: #161818;
 	--channeltextarea-background: #32302f;
 }
 
-::placeholder,
-body,
-button,
-input,
-select,
-textarea {
+::placeholder, body, button, input, select, textarea {
 	font-family: var(--font), sans-serif;
 }
 
-.da-popouts .da-container,
-.da-friendsTableHeader,
-.da-friendsTable,
-.da-autocomplete,
-.da-themedPopout,
-.da-header,
-.da-footer,
-.da-userPopout > *,
-.da-systemPad,
-.da-autocompleteHeaderBackground {
+.da-popouts .da-container, .da-friendsTableHeader, .da-friendsTable, .da-autocomplete, .da-themedPopout, .da-header, .da-footer, .da-userPopout > *, .da-systemPad, .da-autocompleteHeaderBackground {
 	background-color: var(--background-secondary) !important;
 	border-color: transparent !important;
 }
@@ -43,17 +29,14 @@ textarea {
 }
 
 .theme-dark #bd-settings-sidebar .ui-tab-bar-item {
-	color: var(--interactive-normal);
+		color: var(--interactive-normal);
 }
 
-.theme-dark #bd-settings-sidebar .ui-tab-bar-header,
-div[style*="color: rgb(114, 137, 218);"],
-.da-addButtonIcon {
-	color: var(--channels-default) !important;
+.theme-dark #bd-settings-sidebar .ui-tab-bar-header, div[style*="color: rgb(114, 137, 218);"], .da-addButtonIcon {
+		color: var(--channels-default) !important;
 }
 
-.theme-dark #bd-settings-sidebar .ui-tab-bar-item.selected,
-.theme-dark .da-autocompleteRow .da-selectorSelected {
+.theme-dark #bd-settings-sidebar .ui-tab-bar-item.selected, .theme-dark .da-autocompleteRow .da-selectorSelected {
 	background-color: var(--background-modifier-selected);
 	color: var(--interactive-active);
 }
@@ -65,7 +48,7 @@ div[style*="color: rgb(114, 137, 218);"],
 .da-messagesWrapper .da-scroller::-webkit-scrollbar,
 .da-messagesWrapper .da-scroller::-webkit-scrollbar-track-piece {
 	background-color: var(--background-tertiary) !important;
-	border-color: rgba(0, 0, 0, 0) !important;
+	border-color: rgba(0,0,0,0) !important;
 }
 
 .da-scrollerThemed .da-scroller::-webkit-scrollbar-thumb,
