--- a/librewolf/userContent.css
+++ b/librewolf/userContent.css
@@ -1,4 +1,4 @@
-@-moz-document url("about:home"), url("about:preferences"), url("about:config"), url("about:newtab"), url("about:privatebrowsing") {
+@-moz-document url("about:home"), url("about:newtab"), url("about:privatebrowsing") {
   * {
     color: #ebdbb2 !important;
   }
@@ -8,7 +8,4 @@
   .search-inner-wrapper {
     display: none !important;
   }
-}
-:root {
-  --in-content-page-background: #282828 !important;
 }
