--- a/librewolf/userChrome.css
+++ b/librewolf/userChrome.css
@@ -7,6 +7,8 @@
 #PlacesToolbarItems {
   display: flex !important;
   justify-content: center !important;
+  flex-wrap: wrap !important;
+  overflow: hidden !important;
 }
 
 #PersonalToolbar toolbarbutton {
